--- a/nexus3/nexus-service/nexus-chart/templates/deployment.yaml
+++ b/nexus3/nexus-service/nexus-chart/templates/deployment.yaml
@@ -23,22 +23,22 @@ spec:
       containers:
       - env:
         - name: INSTALL4J_ADD_VM_PARAMS
-          value: REPLACE_JVM_OPTS
+          value: -Djava.util.prefs.userRoot=/nexus-data/javaprefs 
         imagePullPolicy: Always
         livenessProbe:
           exec:
             command:
             - /bin/sh
             - -c
-            - 'curl -siu admin:$(cat /nexus-data/admin.password) http://localhost:8081/service/metrics/healthcheck
+            - 'curl -siu admin:da2f0d35-b146-4bf2-abae-96e4faf3b621 http://localhost:8081/service/metrics/healthcheck
               | grep healthy | grep true
 
               '
           failureThreshold: 3
-          initialDelaySeconds: REPLACE_DELAY
+          initialDelaySeconds: 120 
           periodSeconds: 10
           successThreshold: 1
-          timeoutSeconds: REPLACE_TIMEOUT
+          timeoutSeconds: 30
         name: {{ .Values.nexusServiceName }}
         ports:
         - containerPort: 8081
@@ -48,15 +48,15 @@ spec:
             command:
             - /bin/sh
             - -c
-            - 'curl -siu admin:$(cat /nexus-data/admin.password) http://localhost:8081/service/metrics/ping
+            - 'curl -siu admin:da2f0d35-b146-4bf2-abae-96e4faf3b621 http://localhost:8081/service/metrics/ping
               | grep pong
 
               '
           failureThreshold: 3
-          initialDelaySeconds: REPLACE_DELAY
+          initialDelaySeconds: 120 
           periodSeconds: 10
           successThreshold: 1
-          timeoutSeconds: REPLACE_TIMEOUT
+          timeoutSeconds: 30 
         resources:
           limits:
             cpu: '1'
@@ -67,8 +67,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
-        - mountPath: REPLACE_VOLUME_MOUNT
-          name: REPLACE_VOLUME_NAME
+        - mountPath: /nexus-data 
+          name: nexus-data 
         image: {{ .Values.imageName }}
       dnsPolicy: ClusterFirst
       restartPolicy: Always
@@ -76,6 +76,6 @@ spec:
       securityContext: {}
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: REPLACE_VOLUME_NAME
+      - name: nexus-data 
         persistentVolumeClaim:
-          claimName: REPLACE_CLAIM_NAME
+          claimName: nexus-data-pvc 
